syntax = "proto3";

package pbbase;

option go_package = "./pbbase";

message Empty {

}

message PageInfo{
  int32 page = 1;
  int32 pageSize = 2;
  string keyword = 3;
}

